--- a/notes/templates/notes/top.html
+++ b/notes/templates/notes/top.html
@@ -1,6 +1,9 @@
+{% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	{% bootstrap_css %}
+	{% bootstrap_javascript %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,21 +12,55 @@
 <body>
 	<div class="container">
 		<header>
+			<nav class="navbar">
+			</nav>
 		</header>
 		<div class="main">
+			<div class="welcome">
+				<a href="{% url 'notes_new' %}" class="btn btn-primary">追加</a>
+			</div>
 			<!-- 家計簿を繰り返し表示します。-->
-			{% for kakeibo in kakeibos %}
-				<li>
-				<a href="{% url 'notes_detail' kakeibo.id %}">{{kakeibo.title }}</a>
-				</li>
-			{% endfor %}
-			
-			<!-- 家計簿の登録が有無を表示します。 -->
 			{% if kakeibos %}
-				<p>snippet登録済み</p>
+				<table class="table">
+					<tr>
+						<th>タイトル</th>
+						<th>金額</th>
+						<th>タグ</th>
+						<th>取引日</th>
+						<th>入金・出金</th>
+					</tr>
+					{% for kakeibo in kakeibos %}
+						<tr>
+							<td>
+								<a 
+									href="{% url 'notes_detail' kakeibo.id %}"
+								>
+									{{ kakeibo.title }}
+								</a>
+							</td>
+							<td>
+								{{ kakeibo.money }}
+							</td>
+							<td>
+								{{ kakeibo.tag }}
+							</td>
+							<td>
+								{{ kakeibo.trading_dt }}
+							</td>
+							<td>
+								{% if kakeibo.io_flag == "0"%}
+									入金
+								{% else %}
+									出金
+								{% endif%}
+							</td>
+						</tr>
+					{% endfor %}
+				</table>					
 			{% else %}
 				<p>snippet登録なし</p>
 			{% endif %}
+			
 		</div>
 		<footer>
 		</footer>
