--- a/notes/templates/notes/note_edit.html
+++ b/notes/templates/notes/note_edit.html
@@ -1,22 +1,17 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8" />
-	<title>Document</title>
-</head>
-<body>
-	<div class="container">
-		<header>
-		<h1>編集画面</h1>
-		</header>
-		<div class="main">
-		<form action="" method="post">
-			{% csrf_token %}
-			{{ form.as_p }}
-			<button type="submit"> 保存 </button>
-		</form>
-		</div>
-		<footer></footer>
-	</div>
-</body>
-</html>
+{% extends "base.html" %}
+{% load django_bootstrap5 %}
+
+{% block main %}
+<header>
+	<h1>編集画面</h1>
+</header>
+<div class="main">
+	<form action="" method="post">
+		{% csrf_token %}
+		{% bootstrap_form form%}
+		{% bootstrap_button button_type="submit" content="作成" %}
+	</form>
+</div>
+<footer>
+</footer>
+{% endblock %}
