add datepicker & jquery

--- a/notes/templates/base.html
+++ b/notes/templates/base.html
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Document</title>
+	<script src="{% static 'js/jquery-3.6.3.min.js' %}"></script>
 	{% bootstrap_css %}
 	{% bootstrap_javascript %}
 	{% block extraheader %}{% endblock %}
