--- a/notes/templates/notes/note_edit.html
+++ b/notes/templates/notes/note_edit.html
@@ -6,6 +6,7 @@
 <h1>編集画面</h1>
 
 <div class="main">
+	{{ form.media }} 
 	<form action="" method="post">
 		{% csrf_token %}
 		{% bootstrap_form form%}
