--- a/notes/templates/notes/note_detail.html
+++ b/notes/templates/notes/note_detail.html
@@ -20,7 +20,7 @@
 		<tr>
 			<td>{{ kakeibo.trading_dt }}</td>
 			<td>{{ kakeibo.money}}</td>
-			<td>{{ kakeibo.io_flag }}</td>
+			<td>{{kakeibo.get_io_flag_display }}</td>
 			<td>{{ kakeibo.tag }}</td>
 		</tr>
 	</table>
