--- a/notes/templates/notes/top.html
+++ b/notes/templates/notes/top.html
@@ -29,7 +29,7 @@
 					</td>
 					<td>
 						{{ kakeibo.money }}
-					</td>
+					</t d>
 					<td>
 						{{ kakeibo.tag }}
 					</td>
@@ -37,15 +37,11 @@
 						{{ kakeibo.trading_dt }}
 					</td>
 					<td>
-						{% if kakeibo.io_flag == 0%}
-							入金
-						{% else %}
-							出金
-						{% endif%}
+						{{kakeibo.get_io_flag_display }}
 					</td>
 				</tr>
 			{% endfor %}
-		</table>					
+		</table>
 	{% else %}
 		<p>家計簿の登録なし</p>
 	{% endif %}
